--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "7b46ab62-94ce-4103-af07-bcf633c400f0"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
