--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --o",
     "build": "ng build",
-    "deploy": "ng deploy --base-href=git@github.com:rogcolaco/front-end-bootcamp-dio/",
+    "deploy": "ng deploy ng deploy --base-href=https://rogcolaco.github.io/front-end-bootcamp-dio/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
